--- a/resources/assets/sass/_home.scss
+++ b/resources/assets/sass/_home.scss
@@ -21,13 +21,42 @@
     font-weight: 700;
     text-align: center;
     text-transform: uppercase;
+    color: #fff;
+    @include display(flex);
+    @include align-items(center);
+
+    &:before,
+    &:after {
+      content: "";
+      border-bottom: 2px solid rgba(white, 0.5);
+      vertical-align: center;
+      flex: 1;
+    }
+
+    span {
+      @include align-self(center);
+      padding: 0 10px;
+    }
   }
 
   &-news {
     @include outer-container(70%);
+    margin-bottom: 2rem;
+    background: rgba(black, 0.5);
+    padding: 10px;
   }
 
+  &-brands {
+    margin-bottom: 2rem;
+  }
 
+  &-products {
+    margin-bottom: 2rem;
+  }
+
+  &-section-newsletter-n-local {
+    margin-bottom: 2rem;
+  }
 
   &-stores {
     text-align: center;
@@ -72,8 +101,7 @@
   &-section {
     &-newsletter-n-local {
       @include row(table);
-      margin-bottom: 1rem;
-
+  
       .home-newsletter,
       .home-stores {
         @include span-columns(6);
