--- a/resources/assets/sass/_catalog.scss
+++ b/resources/assets/sass/_catalog.scss
@@ -1,3 +1,5 @@
+@import 'product-displayer';
+
 .mk-catalog {
   @include outer-container;
   &__categories {
@@ -65,4 +67,9 @@
     padding: 0;
     margin: 0;
   }
+}
+.mk-product-page {
+  @include span-columns(9);
+  background: #fff;
+  margin-bottom: 2rem;
 }
