--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,6 +8,7 @@ $light-gray: #919191;
 @import 'carousel';
 @import 'footer';
 @import 'catalog';
+@import 'checkout';
 
 body {
   background: #000 url('/images/woods.jpg') repeat-y;
