--- a/resources/assets/sass/_product-displayer.scss
+++ b/resources/assets/sass/_product-displayer.scss
@@ -8,6 +8,10 @@
     display: inline-block;
     line-height: 0;
     margin: 0 auto;
+    img {
+      width: 100%;
+      height: auto;
+    }
   }
 
   &__thumbnails {
