--- a/resources/assets/sass/_catalog.scss
+++ b/resources/assets/sass/_catalog.scss
@@ -1,26 +1,10 @@
 @import 'product-displayer';
+@import 'product-page';
+@import 'product-buy';
+@import 'sidebar';
 
 .mk-catalog {
   @include outer-container;
-  &__categories {
-    background: $dark;
-    @include span-columns(3);
-    font-size: .75rem;
-    ul {
-      list-style-type: none;
-      padding: 0;
-      margin: 0;
-    }
-    li {
-      a {
-        color: $light-gray;
-        text-decoration: none;
-        padding: .5rem 1rem;
-        display: inline-block;
-        width: 100%;
-      }
-    }
-  }
 
   &__products {
     @include span-columns(9);
@@ -67,9 +51,4 @@
     padding: 0;
     margin: 0;
   }
-}
-.mk-product-page {
-  @include span-columns(9);
-  background: #fff;
-  margin-bottom: 2rem;
 }
