--- a/resources/assets/sass/_product-buy.scss
+++ b/resources/assets/sass/_product-buy.scss
@@ -1,21 +1,46 @@
 .product-buy {
-  &_colors {
+  @include span-columns(6);
+  &__color {
     text-transform: capitalize;
+    border: 2px solid transparent;
+    display: inline-block;
+    &.selected {
+      border: 2px solid $red;
+    }
+    label {
+      display: inline-block;
+      padding: 1rem;
+      cursor: pointer;
+    }
+    input {
+      display: none;
+    }
     &.disabled {
       color: $light-gray;
     }
   }
-  &_size {
-    width: 100%;
+  &__size {
+    display: block;
+    width: 60%;
+    margin-bottom: 1rem;
   }
   &__qty {
     width: 4rem;
     padding-right: 0;
+    margin-bottom: 1rem;
+    margin-right: 1rem;
   }
-
+  &__subtotal {}
+  &__total {
+    // font-weight: bolder;
+    font-size: 1.25rem;
+  }
   &__buy {
     background: $red;
     color: #FFF;
+    display: block;
+    width: 60%;
+    cursor: pointer;
   }
 
 }
