--- a/resources/assets/sass/_product-page.scss
+++ b/resources/assets/sass/_product-page.scss
@@ -21,4 +21,17 @@
     color: $red;
     font-size: .75rem;
   }
+  &__related-products {
+    border-top: 1px solid rgba($white, .5);
+    margin-top: 1rem;
+    @include span-columns(12);
+    h3 {
+      text-transform: uppercase;
+      font-size: 0.75rem;
+      color: $gray;
+    }
+    .productBox {
+      @include span-columns(3);
+    }
+  }
 }
