--- a/resources/assets/sass/_sidebar.scss
+++ b/resources/assets/sass/_sidebar.scss
@@ -10,6 +10,7 @@
     padding: .5rem 1rem;
   }
   ul {
+    @include outer-container;
     list-style-type: none;
     padding: 0;
     margin: 0;
@@ -22,6 +23,16 @@
       padding: .5rem 1rem;
       display: inline-block;
       width: 100%;
+    }
+  }
+  &__brand {
+    @include span-columns(4);
+    a {
+      padding: 0;
+    }
+    img {
+      width: 100%;
+      height: auto;
     }
   }
 }
