--- a/resources/assets/sass/_catalog.scss
+++ b/resources/assets/sass/_catalog.scss
@@ -10,7 +10,7 @@
     @include span-columns(9);
     margin: 0 auto;
 
-    .productBox {
+    .product-box {
       @include span-columns(4);
       @include omega(2n+1);
       margin-bottom: 2rem;
