--- a/resources/assets/sass/news/_small-box.scss
+++ b/resources/assets/sass/news/_small-box.scss
@@ -4,6 +4,7 @@
     cursor: pointer;
     text-transform: none;
     text-decoration: none;
+    max-width: 100%;
   }
   &__image {
     img {
@@ -27,6 +28,7 @@
     color: $white;
     margin: 0;
     margin-bottom: .5rem;
+    @include ellipsis;
   }
   &__description {
     color: $white;
