--- a/resources/assets/sass/_footer.scss
+++ b/resources/assets/sass/_footer.scss
@@ -7,6 +7,12 @@
 
   a {
     color: #ccc;
+    display: inline-block;
+  }
+
+  img {
+    max-width: 100%;
+    height: auto;
   }
 
   .section {
