--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -77,80 +77,7 @@ body {
   padding: .5rem 1rem;
   font-size: .75rem;
 }
-.news {
-  &__box {
-    font-size: .75rem;
-    text-align: center;
-    background: #fff;
-    @include pad(10px);
 
-    &__picture {
-      margin-bottom: .5rem;
-      display: inline-block;
-      width: 100%;
-    }
-
-    &__picture img {
-      height: auto;
-      width: 100%;
-    }
-
-    &__title {
-      @include ellipsis;
-      color: $gray;
-      text-transform: uppercase;
-      white-space: nowrap;
-      font-weight: 700;
-      display: inline-block;
-      width: 100%;
-    }
-
-    &__subtitle {
-      @include ellipsis;
-      color: $light-gray;
-      white-space: nowrap;
-      display: inline-block;
-    }
-  }
-}
-
-.product-box {
-  $background: #fff;
-  background: $background;
-  display: inline-block;
-  font-size: .75rem;
-  padding-bottom: 1rem;
-  text-align: center;
-  width: 100%;
-
-  &__link {
-    display: inline-block;
-    width: 100%;
-  }
-
-  & &__image {
-    display: inline-block;
-    height: auto;
-    margin: 0;
-    width: 100%;
-    margin-bottom: .5rem;
-  }
-
-  &__title {
-    @include ellipsis;
-    color: $gray;
-    display: inline-block;
-    font-weight: 700;
-    text-transform: uppercase;
-    white-space: nowrap;
-    width: 100%;
-  }
-
-  &__price {
-    color: $light-gray;
-    font-weight: 700;
-  }
-}
 .markshop-logo {
   text-align: center;
   background: transparent url('/images/header.jpg') no-repeat;
@@ -164,6 +91,7 @@ body {
     bottom: -0.5rem;
   }
 }
+
 #header {
   @include pad;
   background: $dark;
@@ -240,3 +168,5 @@ body {
 @import 'catalog';
 @import 'checkout';
 @import 'news/index';
+@import 'products/index';
+@import 'spinner';
