--- a/resources/assets/sass/pages/_stores.scss
+++ b/resources/assets/sass/pages/_stores.scss
@@ -13,13 +13,20 @@
   }
 
   &__map {
-    // definition
+    iframe {
+      border: 0;
+    }
   }
 }
 
 .store-box {
   @include row;
   margin-bottom: 3em;
+  border-bottom: 1px solid $red;
+  padding-bottom: 1.5em;
+  &:last-child {
+    border-bottom: 0;
+  }
   &__info {
     @include span-columns(4);
     font-size: .75rem;
@@ -27,6 +34,16 @@
       color: $red;
       text-transform: uppercase;
       font-size: 2rem;
+    }
+    a {
+      color: $red;
+      border: 1px solid $red;
+      text-decoration: none;
+      display: inline-block;
+      padding: .5em 1em;
+    }
+    .fa {
+      font-size: 1rem;
     }
   }
 
