improvements on styling, product added notification

--- a/resources/assets/sass/_product-buy.scss
+++ b/resources/assets/sass/_product-buy.scss
@@ -42,5 +42,12 @@
     width: 60%;
     cursor: pointer;
   }
+  &__bought {
+    background: white;
+    color: $dark;
+    display: block;
+    cursor: pointer;
+    width: 60%;
+  }
 
 }
