--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -14,7 +14,7 @@ body {
 body {
   background: #000 url('/images/woods.jpg') repeat-y;
   background-size: 100%;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 .mk-page-form {
   @include outer-container;
