landpage styling, export excel

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -169,4 +169,5 @@ body {
 @import 'news/index';
 @import 'products/index';
 @import 'spinner';
-@import 'pages/index'
+@import 'pages/index';
+@import 'search-box';
