--- a/resources/assets/sass/products/_small-box.scss
+++ b/resources/assets/sass/products/_small-box.scss
@@ -3,6 +3,7 @@
   background: $background;
   display: inline-block;
   font-size: .75rem;
+  padding: .5rem;
   padding-bottom: 1rem;
   text-align: center;
   width: 100%;
@@ -13,16 +14,21 @@
     width: 100%;
   }
 
-  & &__image {
+  &__image {
     display: inline-block;
     height: auto;
     margin: 0;
     width: 100%;
     margin-bottom: .5rem;
+    border-bottom: 1px solid $light-gray;
+    padding-bottom: .5rem;
   }
 
   &__title {
     @include ellipsis;
+    display: inline-block;
+    margin: 0 .5rem;
+
     color: $gray;
     display: inline-block;
     font-weight: 700;
